Added CSS file and end to end chat APP along with Group Name

--- a/views/group.ejs
+++ b/views/group.ejs
@@ -3,6 +3,9 @@
 <form action="/group" method="post">
    
      <input type="text" name="name" >
-     <input type="submit"  >
+     <button id = "send"> Submit</button>
+    </input>
 
 </form>
+
+
